plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'com.vinsfortunato'
version '0.1'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

javafx {
    version = "13"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

jar {
    dependsOn configurations.runtime
    from {
        (configurations.runtime).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    manifest {
        attributes(
                'Main-Class': 'com.vinsfortunato.smtools.Main',
                'App-Version' : project.version
        )
    }
    baseName 'SMTools'
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.3'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.3'
}

mainClassName = 'com.vinsfortunato.smtools.Main'